--- a/NeutralNews/Pages/Contact.cshtml
+++ b/NeutralNews/Pages/Contact.cshtml
@@ -7,24 +7,22 @@
 <h3>@Model.Message</h3>
 
 <form>
-
     <div class="form-group">
         <label for="InputEmail1">Enter your Email address</label>
         <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Enter email">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
-    <br/>
-    <br/>
+    <br />
+    <br />
 
     <div class="form-group">
         <label for="emailText">Ask questions or address concerns here</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+        <textarea class="form-control" id="SubmittedConcerns" rows="5"></textarea>
     </div>
 
     <br />
-    <br/>
+    <br />
 
     <button type="submit" class="btn btn-primary">Submit</button>
 
 </form>
-
