Added web config page for database connection, finished model/data controllers to create view on page with article information from the Source_Data table

--- a/NeutralNews/Pages/Index.cshtml
+++ b/NeutralNews/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Index";
 }
 
 @* Our informational images will slide through here *@
