Added Models, Views, Controllers for SocialIssues page and Email(Contact Us page)

--- a/NeutralNews/Pages/SocialIssues.cshtml
+++ b/NeutralNews/Pages/SocialIssues.cshtml
@@ -1,8 +1,12 @@
 ﻿@page
-@model SocialModel
+@model NeutralNews.Models.SocialIssuesData
 @{
     ViewData["Title"] = "Social Issues";
 }
+@{
+    Layout = "~/Views/SocialIssues/SocialIssuesArticles.cshtml";
+}
+@*
 <div class="row" id="categorychoices">
 
 </div>
