--- a/NeutralNews/Pages/Contact.cshtml
+++ b/NeutralNews/Pages/Contact.cshtml
@@ -1,10 +1,13 @@
 ﻿@page
-@model ContactModel
+@model Models.EmailFormModel
 @{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contact Us";
 }
+@{
+    Layout = "~/Views/Email/Contact.cshtml";
+}
+
 <h2>@ViewData["Title"]</h2>
-<h3>@Model.Message</h3>
 
 <form>
     <div class="form-group">
@@ -38,22 +41,22 @@
 
 <script>
     //button click event
-    document.getElementById("SubmitButton").onclick = function () {validateFunction()};
+    document.getElementById("SubmitButton").onclick = function () { validateFunction() };
 
     function validateFunction() {
-    // here are my variables
-    var Email = document.getElementById("InputEmail").value;
-    var emailText = document.getElementById("SubmittedConcerns").value;
-    var iChars = "~`!#$%^&*+=-[]\\\';,/{}|\":<>?";
+        // here are my variables
+        var Email = document.getElementById("InputEmail").value;
+        var emailText = document.getElementById("SubmittedConcerns").value;
+        var iChars = "~`!#$%^&*+=-[]\\\';,/{}|\":<>?";
 
-    //check for nulls/empty inputs
-    if (Email == null || Email == "") {
+        //check for nulls/empty inputs
+        if (Email == null || Email == "") {
             window.alert("Please enter a valid email");
             console.log("Please enter a valid email");
-    }
+        }
         if (emailText == null || emailText == "") {
             window.alert("Please type a message before submitting");
             console.log("Please type a message before submitting" + validInput);
-    }
-};
+        }
+    };
 </script>
