--- a/NeutralNews/Pages/Index.cshtml
+++ b/NeutralNews/Pages/Index.cshtml
@@ -14,11 +14,11 @@
     }
     /* Change colors based on political bias score */
     #slightLeft {
-        background-color: #061f80;
+        background-color: #6ca1eb;
     }
 
-    #FarRight {
-        background-color: #2759b8;
+    #FarLeft {
+        background-color: #061f80;
     }
 
     #Neutral {
