--- a/NeutralNews/Pages/SocialIssues.cshtml
+++ b/NeutralNews/Pages/SocialIssues.cshtml
@@ -14,11 +14,11 @@
     }
     /* Change colors based on political bias score */
     #slightLeft {
-        background-color: #34d2eb;
+        background-color: #6ca1eb;
     }
 
     #FarLeft {
-        background-color: #1000c2;
+        background-color: #061f80;
     }
 
     #Neutral {
