--- a/NeutralNews/Pages/Shared/_Layout.cshtml
+++ b/NeutralNews/Pages/Shared/_Layout.cshtml
@@ -10,11 +10,12 @@
         <link rel="stylesheet" href="~/css/site.css" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     </environment>
-    <environment exclude="Development">
+    <environment exclude="Production">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     </environment>
 </head>
 <body>
